# intersonic

./: .gitignore  Dockerfile.app  README.md  docker-compose.yml  docker-setup.sh  lyrics.py  main.py  main.sh  pyproject.toml  spotdl.sh  upload.sh
src/: download.py  lyrics.py  main.py  metadata.py  start.sh  tailscale.py  tailscale_types.py  utils.py
src/metadata/: album_art.py  lyrics.py  main.py  tags.py
src/web/: server.py
src/web/templates/: _status.html  index.html
