# This file isn't actually used by the docker container, but it is useful
# if you want to install the dependencies locally for types and linting.

[project]
name = "intersonic"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "mutagen>=1.47.0",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "spotdl>=4.2.11",
]
